--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,3 +1,94 @@
+.normal {
+    background-color: #a6a877;
+}
+
+.grass {
+    background-color: #77c850;
+}
+
+.fire {
+    background-color: #ee7f30;
+}
+
+.water {
+    background-color: #678fee;
+}
+
+.electric {
+    background-color: #f7cf2e;
+}
+
+.ice {
+    background-color: #98d5d7;
+}
+
+.ground {
+    background-color: #dfbf69;
+}
+
+.flying {
+    background-color: #a98ff0;
+}
+
+.poison {
+    background-color: #a040a0;
+}
+
+.fighting {
+    background-color: #bf3029;
+}
+
+.psychic {
+    background-color: #f65687;
+}
+
+.dark {
+    background-color: #725847;
+}
+
+.rock {
+    background-color: #b8a137;
+}
+
+.bug {
+    background-color: #a8b720;
+}
+
+.ghost {
+    background-color: #6e5896;
+}
+
+.steel {
+    background-color: #b9b7cf;
+}
+
+.dragon {
+    background-color: #6f38f6;
+}
+
+.fairy {
+    background-color: #f9aec7;
+}
+
+.pagination{
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+}
+
+.pagination button {
+    color: white;
+    padding: 0.25rem 0.5rem;
+    font-size: .900rem;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;;
+    cursor: pointer;
+}
+
 .pokemons{
     display: grid;
     grid-template-columns: 1fr;
@@ -11,18 +102,17 @@
     flex-direction: column;
     margin: .5rem;
     padding: 1rem;
-    background-color: #49D0B0;
     border-radius: 1rem;
 }
+
 .pokemon .name{
     color: #fff;
     margin: 0;
-
+    text-transform: capitalize;
 }
 
 .pokemon .number{
-    color: #000000;
-    opacity: .3;
+    color: #ffffff;
     text-align: right;
 }
 
@@ -41,11 +131,12 @@
 }
 
 .pokemon .detail .types .type{
-   background-color: #61e1ca;
    color: #fff;
+   filter: brightness(1.1);
+   text-align: center;
    padding: .25rem .5rem;
    margin: .25rem 0;
-   font-size: .625rem;
+   font-size: .800rem;
    border-radius: 1rem;
 }
 
